# ohtu-tehtavat

viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko1/varasto/: pyproject.toml
viikko2/: haara2ndfilu.txt
viikko2/branchjobs/: LICENCE  README.md
viikko2/project-reader/src/: project_reader.py
viikko2/teht1/: pyproject.toml
viikko2/verkkokauppa-1/src/: kauppa.py  pankki.py  varasto.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: PlayerReader.py  PlayerStats.py  index.py  player.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko5/gittagit/: eka.txt
viikko5/laskin/src/: kayttoliittyma.py
